# Multiple-Object-Tracker

./: .gitignore  CMakeLists.txt  H_Tracker.pro  README.md
src/GUI/: PlotDialog.cpp  PlotDialog.h  PlotDialog.ui  PlotDialogColors.cpp  PlotDialogColors.h  mainwindow.cpp
src/Test/: Factory_StrictNoAmbiguity.h  Tester.cpp  Tester.h  Tester_Assignment.cpp  Tester_Assignment.h  Tester_Filter.cpp  Tester_Filter.h  Tester_Gater.cpp  Tester_Gater.h  Tester_Maintenance.cpp  Tester_Maintenance.h  Tester_Tracker.cpp  Tester_Tracker.h  Tester_Types.h
src/Tracker/: Assignment.h  Assignment_NoAmbiguity.h  DistanceMetric.h  Factory.h  Filter.h  Filter_CVAB.h  Gater.h  Maintenance.h  Maintenance_History.h  Track.h  Tracker.h  Types.h
src/Utils/: EnumClass.h
